sadna1 app.js,index.html, code-analyzer.js, code-analyzer.test.js

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,10 @@ cache: npm
 script:
   - npm install
   - npm run test
+  - npm run coverage
 
 notifications:
   email:
     recipients:
-      - avdayan@bgu.ac.il
+      - tsionac@post.bgu.ac.il
     on_failure: always
